blog/k8s/blog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service
  namespace: blog
  labels:
    app: blog-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-service
  template:
    metadata:
      labels:
        app: blog-service
    spec:
      containers:
        - name: blog-service
          image: 192.168.201.129/demo/blog-service:66-d7833b1
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blog
spec:
  type: ClusterIP
  selector:
    app: blog-service
  ports:
    - port: 80
      targetPort: 5000
